force-app-core/main/default/objects/Opportunity/fields/ARR_Up_For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>ARR_Up_For_Renewal__c</fullName>
    <formula>IF(
  RecordType.Name = &apos;Renewal&apos;,
  Renewal_Of__r.ARR__c + BLANKVALUE(Renewal_Of__r.Total_Amendment_ARR__c, 0),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Captures the ARR from the previous opportunity, enabling comparisons to determine whether the renewal results in upsell, downsell, or flat revenue movement.</inlineHelpText>
    <label>ARR Up For Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>