force-app-core/main/default/objects/Opportunity/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>IF(
  NOT(ISPICKVAL(StageName, &apos;Closed Won&apos;)),
  NULL,
  IF(
    TODAY() &lt; Contract_Start_Date__c,
    &quot;Pending&quot;,
    IF(
      TODAY() &gt; Contract_End_Date__c,
      &quot;Expired&quot;,
      &quot;Active&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Indicates the current status of the contract.</inlineHelpText>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>