force-app-core/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <inlineHelpText
  >Specifies the length of the contract in months.</inlineHelpText>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>