force-app-core/main/default/objects/Opportunity/fields/Renewal_Of__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText
  >Links this opportunity to the previous opportunity it is renewing.</inlineHelpText>
    <label>Renewal Of</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Renewed By</relationshipLabel>
    <relationshipName>Renewed_By</relationshipName>
    <type>Lookup</type>
</CustomField>