force-app-core/main/default/objects/Opportunity/fields/Revenue_Movement_ARR_C3__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Movement_ARR_C3__c</fullName>
    <formula>IF(
  RecordType.Name = &apos;Sales&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Won&apos;),
   ARR__c ,
  IF(
    RecordType.Name = &apos;Upsell&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Won&apos;),
    ARR__c ,
    IF(
      RecordType.Name = &apos;Renewal&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Lost&apos;),
      -ARR_Up_For_Renewal_C3__c,
      IF(
        RecordType.Name = &apos;Renewal&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Won&apos;),
        IF(
          ARR__c - ARR_Up_For_Renewal_C3__c &gt; 0,
          ARR__c - ARR_Up_For_Renewal_C3__c,
          IF(
            ARR__c - ARR_Up_For_Renewal_C3__c &lt; 0,
            ARR__c - ARR_Up_For_Renewal_C3__c,
            0
          )
        ),
        NULL
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the difference in ARR between the current opportunity and the previous one.</inlineHelpText>
    <label>Revenue Movement ARR (C3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>