force-app-core/main/default/objects/Opportunity/fields/Revenue_Movement_Type_C3__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Movement_Type_C3__c</fullName>
    <formula>IF(
  RecordType.Name = &apos;Sales&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Won&apos;),
  &apos;NEW&apos;,
  IF(
    RecordType.Name = &apos;Upsell&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Won&apos;),
    &apos;UP(amd)&apos; ,
    IF(
      RecordType.Name = &apos;Renewal&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Lost&apos;),
      &apos;CHURN&apos;,
      IF(
        RecordType.Name = &apos;Renewal&apos; &amp;&amp; ISPICKVAL(StageName, &apos;Closed Won&apos;),
        IF(
          ROUND(ARR__c, 2) - ROUND(ARR_Up_For_Renewal_C3__c, 2) &gt; 0,
          &apos;UP(inc)&apos;,
          IF(
            ROUND(ARR__c, 2) - ROUND(ARR_Up_For_Renewal_C3__c, 2) &lt; 0,
            &apos;DOWN&apos;,
            &apos;FLAT&apos;
          )
        ),
        NULL
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Categorizes the renewal as an Upsell, Downsell, Flat Renewal, or Churn based on the comparison between the current and previous ARR.</inlineHelpText>
    <label>Revenue Movement Type (C3)</label>
    <type>Text</type>
</CustomField>