force-app-core/main/default/objects/Opportunity/fields/Total_Amendment_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Amendment_ARR__c</fullName>
    <inlineHelpText
  >The cumulative ARR value added through amendments during the contract term. If there are no Closed Won Upsell records linked to this Opportunity, this value will be blank.</inlineHelpText>
    <label>Total Amendment ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>