force-app-core/main/default/objects/Opportunity/listViews/Forecasted_Renewals_NEXT_90_DAYS.listView-meta.xml
<ListView>
    <fullName>Forecasted_Renewals_NEXT_90_DAYS</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Days_To_Close__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Contract_Term__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>ARR__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Renewal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_90_DAYS</value>
    </filters>
    <label>Forecasted Renewals (NEXT 90 DAYS)</label>
</ListView>